--- a/index.html
+++ b/index.html
@@ -633,9 +633,9 @@ BOUTIQUE
   </div>
   <div class="parent">
     <div class="child2">
-      <h2>Brigade de Prières</h2>
+      <h2>Brigade de Prière</h2>
       <p>
-      La brigade de Prières est un programme qui se déroule au sein du centre La grâce parle les <strong> mardis, </strong> <strong>jeudi,</strong> <strong>vendredi</strong>. C'est un programme ou les personnes de toute communauté religieuse se rassemblent pour élever leur voix à Dieu pour une intervention divine de notre seigneur Jésus que ce soit pour la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joindre à des séances de prière collectives visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+      La brigade de Prières est un programme qui se déroule au sein du centre <mark>"La grâce parle" </mark>, les <strong> Mardis, </strong> <strong>Vendredi,</strong>, <strong>Dimanche</strong> et les <strong>Lundi </strong> en Direct sur Facebook.  C'est un programme ou les personnes de toute communauté religieuse se rassemblent pour élever leur voix à Dieu pour une intervention divine de notre seigneur Jésus que ce soit pour la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joints à une séance de prière visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie.
       </p>
       <a
         class="btn btn-outline-primary py-2 px-3"
