--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@
     </script>
   
   </head>
+  
   <body>
     <!-- Spinner Start -->
     <div
@@ -273,10 +274,10 @@
           <div
             class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
           >
-            Ce que nous faisons
+            Ce que nous croyons
           </div>
           <h1 class="display-6 mb-5">
-            Apprenez-en plus sur ce que nous faisons et impliquez-vous.
+            Découvrez davantage sur nos activités et engagez-vous avec nous.
           </h1>
         </div>
      
@@ -305,8 +306,8 @@ Objectifs
       <img
       class="image_objectif"
         src="./img/dalum1.jpg"
-        width="140"
-        height="140"
+        width="120"
+        height="120"
         alt=""
       />
     </div>
@@ -377,14 +378,12 @@ Objectifs
  <div class="mainOne">  <main>
 
   <section id="vision">
-    <h2>Vision</h2>
-    <p>Vestibulum fringilla pede sit amet augue. Curabitur turpis.
-
-      Phasellus accumsan cursus velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.</p>
+    <h2>Vision<img width="40" src="./img/but.png" alt="" ></h2>
+    <p> Créer un monde où les personnes vulnérables sont soutenues et autonomisées, où la jeunesse accède à une éducation de qualité et à des opportunités de formation professionnelle, où l'environnement et les ressources naturelles sont préservés pour les générations futures, où la culture béninoise est célébrée et promue, et où les droits de l'homme sont défendus et respectés.</p>
   </section>
   <section id="mission">
-    <h2>Mission</h2>
-    <p>Notre mission est de...</p>
+    <h2>Mission<img width="40" src="./img/mission.webp" alt="" ></h2>
+    <p> Notre mission est d'assister activement les personnes vulnérables en offrant un soutien et des ressources essentiels, de faciliter l'accès à une éducation de base de qualité et à des programmes de formation professionnelle pour les jeunes, de participer activement à la conservation et à la préservation de l'environnement et des ressources naturelles, de promouvoir et de valoriser la culture béninoise à travers diverses initiatives, et de défendre inlassablement les droits de l'homme en sensibilisant et en plaidant pour leur respect.</p>
   </section>
 </main></div>
 <br>
