--- a/temoignage.html
+++ b/temoignage.html
@@ -51,18 +51,37 @@
       gtag("config", "G-FSM4EQJ2E1");
     </script>
     <style>
-      @media (max-width: 767px) {
-        .world {
-          background-image: url(./img/world.png);
-          width: 100%;
-          margin: auto;
-          height: 300px;
-          background-position: bottom;
-          background-repeat: no-repeat;
-          background-size: cover;
-          clip-path: ellipse(50% 60% at 50% 40%);
-        }
+      /* Styles pour le conteneur principal */
+      .artist-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        transform: translateY(-45px);
+        width: 100%;
+        height: auto; /* Ajustez la hauteur selon vos besoins */
       }
+      body {
+        background-color: #f5f5f5;
+      }
+      /* Styles pour le conteneur de l'image */
+      .image-container {
+        margin-right: 20px; /* Marge de 20px à droite de l'image */
+      }
+
+      /* Styles pour l'arrière-plan de la peinture */
+      .painting-background {
+        background-color: #cd1719; /* Rouge */
+        padding: 10px; /* Espace intérieur autour du h1 */
+        text-align: center;
+      }
+
+      /* Styles pour le h1 */
+      .painting-background h1 {
+        color: white; /* Couleur du texte blanc sur fond rouge */
+      }
+
       /* end */
       .prayer-info-container {
         display: grid;
@@ -402,7 +421,18 @@
     </div>
     <!-- Page Header End -->
 
-    <div class="world"></div>
+    <div class="artist-container">
+      <div class="image-container">
+        <img
+          style="width: 100%; height: 300px; object-fit: cover"
+          src="./img/world (2).png"
+          alt="Carte du Monde"
+        />
+      </div>
+      <div class="painting-background">
+        <h1>Les Témoignages de La Grâce</h1>
+      </div>
+    </div>
     <!-- <header>
       <h1>Bienvenue dans la page “Les Témoignages de La Grâce”</h1>
     </header> -->
