--- a/temoignage.html
+++ b/temoignage.html
@@ -58,9 +58,9 @@
         align-items: center;
         justify-content: center;
         background-color: white;
-        transform: translateY(-60px);
+        transform: translateY(-20px);
         width: 100%;
-        height: auto; /* Ajustez la hauteur selon vos besoins */
+        height: 300px; /* Ajustez la hauteur selon vos besoins */
       }
       body {
         background-color: #f5f5f5;
@@ -75,10 +75,14 @@
         background-color: #cd1719; /* Rouge */
         padding: 10px; /* Espace intérieur autour du h1 */
         text-align: center;
+        position: relative;
+        bottom: 8rem;
       }
 
       /* Styles pour le h1 */
       .painting-background h1 {
+        font-weight: bolder;
+        /* font-size: large; */
         color: white; /* Couleur du texte blanc sur fond rouge */
       }
 
@@ -424,13 +428,13 @@
     <div class="artist-container">
       <div class="image-container">
         <img
-          style="width: 100%; height: 300px; object-fit: cover"
+          style="opacity: 0.4; width: 100%; height: 300px; object-fit: cover"
           src="./img/world (2).png"
           alt="Carte du Monde"
         />
       </div>
       <div class="painting-background">
-        <h1>Les Témoignages de La Grâce</h1>
+        <h1>Encore une fois de plus</h1>
       </div>
     </div>
     <!-- <header>
@@ -438,10 +442,12 @@
     </header> -->
     <!-- <img src="./img/temoignage.jpeg" alt="" /> -->
     <p style="padding: 15px">
-      Bienvenue dans la page “Les Témoignages de La Grâce”. Dans cette section,
-      nous vous invitons à explorer les récits inspirants de femmes et d'hommes
-      qui ont placé leur confiance en Dieu, découvrant ainsi comment Sa
-      puissance et Son amour transforment leurs vies.
+      Bienvenue dans la page “Les Témoignages de La Grâce”.
+    </p>
+    <p style="padding: 15px">
+      Dans cette section, nous vous invitons à explorer les récits inspirants de
+      femmes et d'hommes qui ont placé leur confiance en Dieu, découvrant ainsi
+      comment sa puissance et son amour transforment leurs vies.
     </p>
     <div class="prayer-info-container">
       <div class="prayer-info">
