--- a/contact.html
+++ b/contact.html
@@ -284,7 +284,7 @@
             Pour faire un don en nature, veuillez remplir le formulaire de
             contact en sélectionnant l'option "Dons et Soutien"
             dans le champ "Sujet" et en fournissant toutes les informations
-            requises. Nous vous recontacterons rapidement pour discuter de la manière dont nous allons collecter les dos en nature.
+            requises. Nous vous recontacterons rapidement pour discuter de la manière dont nous allons collecter les dons en nature.
           </p>
           
             <p class="mb-4" id="partenaire">
@@ -412,6 +412,7 @@
                       type="checkbox"
                       class="form-check-input"
                       id="whatsappCheckbox"
+                      style="cursor: pointer;"
                     />
                     <label class="form-check-label" for="whatsappCheckbox"
                       >Je souhaite être contacté sur WhatsApp</label
