--- a/ministere.html
+++ b/ministere.html
@@ -66,6 +66,7 @@
         justify-content: center;
         align-items: center;
         margin: 20px;
+        flex-wrap: wrap;
       }
 
       .prayer-info {
@@ -85,7 +86,7 @@
       }
 
       /* CSS pour les petits écrans */
-      @media (max-width: 767px) {
+      @media (max-width: 620px) {
         .prayer-info-container {
           grid-template-columns: 1fr; /* Afficher en colonne */
           text-align: center;
@@ -413,18 +414,19 @@
     <div class="parent">
       <div class="child7"></div>
       <div class="child2">
-        <h2>Brigade de Prières</h2>
+        <h2>Brigade de Prière</h2>
         <p>
           La brigade de Prières est un programme qui se déroule au sein du
-          centre les <strong> mardis, </strong> <strong>jeudi,</strong>
-          <strong>vendredi</strong>. C'est un programme ou les personnes de
-          toute communauté religieuse se rassemblent pour élever leur voix à
-          Dieu pour une intervention divine de notre seigneur Jésus que ce soit
-          pour la guérison, le travail, la santé et d'autres bénédictions
-          divines. Fondé sur la foi chrétienne, ce programme offre un espace de
-          prière et d'intercession pour les besoins spirituels et matériels de
-          chacun. Les participants peuvent se joindre à des séances de prière
-          collectives visant à solliciter les bénédictions de Dieu dans divers
+          centre "La grâce parle" , les <strong> Mardis, </strong>
+          <strong>Vendredi,</strong> <strong>Dimanche</strong> et les
+          <strong>Lundi </strong> en Direct sur Facebook. C'est un programme ou
+          les personnes de toute communauté religieuse se rassemblent pour
+          élever leur voix à Dieu pour une intervention divine de notre seigneur
+          Jésus que ce soit pour la guérison, le travail, la santé et d'autres
+          bénédictions divines. Fondé sur la foi chrétienne, ce programme offre
+          un espace de prière et d'intercession pour les besoins spirituels et
+          matériels de chacun. Les participants peuvent se joints à une séance
+          de prière visant à solliciter les bénédictions de Dieu dans divers
           aspects de leur vie.
         </p>
         <a
@@ -456,9 +458,9 @@
 
         <div class="prayer-info-container">
           <div class="prayer-info">
-            <i class=""
+            <!-- <i class=""
               ><img src="./img/church.png" width="80" height="80" alt=""
-            /></i>
+            /></i> -->
             <h2>Mardi</h2>
             <p>
               <strong><img src="./img/sun.webp" alt="" /></strong>
@@ -466,9 +468,9 @@
             </p>
           </div>
           <div class="prayer-info">
-            <i class=""
+            <!-- <i class=""
               ><img src="./img/prayer-icon2.png" width="80" height="80" alt=""
-            /></i>
+            /></i> -->
             <h2>Vendredi</h2>
             <p>
               <strong><img src="./img/lune.webp" alt="" /></strong> 19h00 -
@@ -476,9 +478,9 @@
             </p>
           </div>
           <div class="prayer-info">
-            <i class=""
+            <!-- <i class=""
               ><img src="./img/prayer-icon3.png" width="80" height="80" alt=""
-            /></i>
+            /></i> -->
             <h2>Dimanche</h2>
             <p>
               <strong><img src="./img/sun-midi.webp" alt="" /></strong> 16h00 -
