--- a/prayer.html
+++ b/prayer.html
@@ -519,7 +519,7 @@
       <button id="submitButton" type="submit">Soumettre</button>
       <p id="messageParagraph"></p>
     </form>
-    <p id="text"></p>
+    <p id="messageParagraph"></p>
 
     <!-- Footer Start -->
     <div
