--- a/temoignage.html
+++ b/temoignage.html
@@ -66,9 +66,6 @@
         background-color: #f5f5f5;
       }
       /* Styles pour le conteneur de l'image */
-      .image-container {
-        margin-right: 20px; /* Marge de 20px à droite de l'image */
-      }
 
       /* Styles pour l'arrière-plan de la peinture */
       .painting-background {
@@ -408,7 +405,7 @@
     >
       <div class="container text-center">
         <h3 class="display-4 text-white animated slideInDown mb-4">
-          Les Témoignages de La Grâce
+          Les Témoins de La Grâce
         </h3>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
@@ -417,7 +414,7 @@
             </li>
             <!-- <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li> -->
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Les Témoignages de La Grâce
+              Les Témoins de La Grâce
             </li>
           </ol>
         </nav>
@@ -428,13 +425,13 @@
     <div class="artist-container">
       <div class="image-container">
         <img
-          style="opacity: 0.4; width: 100%; height: 300px; object-fit: cover"
+          style="opacity: 0.6; width: 100%; height: 300px; object-fit: cover"
           src="./img/world (2).png"
           alt="Carte du Monde"
         />
       </div>
       <div class="painting-background">
-        <h1>Encore une fois de plus</h1>
+        <h1>Les Témoins de La Grâce</h1>
       </div>
     </div>
     <!-- <header>
@@ -442,7 +439,7 @@
     </header> -->
     <!-- <img src="./img/temoignage.jpeg" alt="" /> -->
     <p style="padding: 15px">
-      Bienvenue dans la page “Les Témoignages de La Grâce”.
+      Bienvenue dans la page “Les Témoins de La Grâce”.
     </p>
     <p style="padding: 15px">
       Dans cette section, nous vous invitons à explorer les récits inspirants de
