--- a/fanfare.html
+++ b/fanfare.html
@@ -329,7 +329,7 @@
     <div class="prayer-info-container">
       <div class="prayer-info">
         <i class=""
-          ><img src="./img/violon.png" width="80" height="80" alt=""
+          ><img src="./img/violon.jpg" width="80" height="80" alt=""
         /></i>
         <h2>Violon</h2>
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -364,27 +364,33 @@
       </div>
       <div class="prayer-info">
         <i class=""
-          ><img src="./img/violon.png" width="80" height="80" alt=""
+          ><img src="./img/xylophone.png" width="80" height="80" alt=""
         /></i>
-        <h2>Violon</h2>
+        <h2>Xylophone</h2>
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
       <div class="prayer-info">
         <i class=""
-          ><img src="./img/violon.png" width="80" height="80" alt=""
+          ><img src="./img/Saxophone.webp" width="80" height="80" alt=""
         /></i>
-        <h2>Violon</h2>
+        <h2>Saxophone</h2>
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
+
       <div class="prayer-info">
-        <i class="fas fa-praying-hands"></i>
-        <h2>Vendredi</h2>
-        <p><strong>Heure :</strong> 19h00 - 22h30</p>
+        <i class=""
+          ><img src="./img/trombone.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Trombone</h2>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
+
       <div class="prayer-info">
-        <i class="fas fa-praying-hands"></i>
-        <h2>Dimanche</h2>
-        <p><strong>Heure :</strong> 17h30 - 20h00</p>
+        <i class=""
+          ><img src="./img/Saxophone.webp" width="80" height="80" alt=""
+        /></i>
+        <h2>Saxophone</h2>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
     </div>
     <div class="headerTwo">
