--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -338,12 +338,12 @@
             </div>
             <h3>Qu’est-ce que Dieu a fait dans votre vie ?</h3>
             <p class="mb-4">
-              Éprouvez-vous des sentiments similaires ? Si c'est le cas,
-              n'hésitez pas à partager ce que Dieu a accompli dans votre vie. Il
-              ne s'agit pas nécessairement de réalisations majeures ; parfois,
-              ce sont les événements simples de la vie quotidienne qui
-              illustrent à quel point Dieu nous comprend, nous aime, et nous
-              donnent de nombreuses raisons d'être reconnaissants.
+              Éprouvez-vous des sentiments de reconnaissance envers Dieu ? Si
+              c'est le cas, n'hésitez pas à partager ce qu'il a accompli dans
+              votre vie. Il ne s'agit pas nécessairement de réalisations
+              majeures ; parfois, ce sont les événements simples de la vie
+              quotidienne qui illustrent à quel point il nous comprend, nous
+              aime, et nous donnent de nombreuses raisons d'être reconnaissants.
             </p>
             <p>
               Pour procéder, veuillez simplement remplir le formulaire, et un
@@ -359,7 +359,13 @@
                 <option value="Féminin">Féminin</option>
               </select>
               <label for="names">Nom complet* :</label>
-              <input type="text" id="names" name="names" required />
+              <input
+                placeholder="Votre Nom Complet"
+                type="text"
+                id="names"
+                name="names"
+                required
+              />
               <label for="tel">Téléphone* :</label>
               <input
                 type="text"
