--- a/ministere.html
+++ b/ministere.html
@@ -416,8 +416,8 @@
       <div class="child2">
         <h2>Brigade de Prière</h2>
         <p>
-          La brigade de Prières est un programme qui se déroule au sein du
-          centre "La grâce parle" , les <strong> Mardis, </strong>
+          La brigade de Prière est un programme qui se déroule au sein du centre
+          "La grâce parle" , les <strong> Mardis, </strong>
           <strong>Vendredi,</strong> <strong>Dimanche</strong> et les
           <strong>Lundi </strong> en Direct sur Facebook. C'est un programme ou
           les personnes de toute communauté religieuse se rassemblent pour
@@ -494,18 +494,7 @@
     <div class="parent">
       <div class="child2">
         <h2>CHAMBRE HAUTE</h2>
-        <p>
-          Le programme de prière "Brigade de la Rédemption" est une initiative
-          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
-          la santé et d'autres bénédictions divines. Fondé sur la foi
-          chrétienne, ce programme offre un espace de prière et d'intercession
-          pour les besoins spirituels et matériels de chacun. Les participants
-          peuvent se joindre à des séances de prière collectives visant à
-          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
-          Que ce soit pour trouver la guérison, la prospérité ou la paix
-          intérieure, la "Brigade de la Rédemption" offre un lieu de
-          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
-        </p>
+        <p></p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
@@ -533,19 +522,8 @@
     <div class="parent">
       <div class="child10"></div>
       <div class="child2">
-        <h2>FEMME DE GRACE</h2>
-        <p>
-          Le programme de prière "Brigade de la Rédemption" est une initiative
-          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
-          la santé et d'autres bénédictions divines. Fondé sur la foi
-          chrétienne, ce programme offre un espace de prière et d'intercession
-          pour les besoins spirituels et matériels de chacun. Les participants
-          peuvent se joindre à des séances de prière collectives visant à
-          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
-          Que ce soit pour trouver la guérison, la prospérité ou la paix
-          intérieure, la "Brigade de la Rédemption" offre un lieu de
-          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
-        </p>
+        <h2 style="text-transform: uppercase">FEMME DE Grâce</h2>
+        <p></p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
@@ -561,19 +539,8 @@
     </div>
     <div class="parent">
       <div class="child2">
-        <h2>LE JEUNE DES JEUNES</h2>
-        <p>
-          Le programme de prière "Brigade de la Rédemption" est une initiative
-          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
-          la santé et d'autres bénédictions divines. Fondé sur la foi
-          chrétienne, ce programme offre un espace de prière et d'intercession
-          pour les besoins spirituels et matériels de chacun. Les participants
-          peuvent se joindre à des séances de prière collectives visant à
-          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
-          Que ce soit pour trouver la guérison, la prospérité ou la paix
-          intérieure, la "Brigade de la Rédemption" offre un lieu de
-          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
-        </p>
+        <h2 style="text-transform: uppercase">LE JEûNE DES JEUNES</h2>
+        <p></p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
@@ -594,18 +561,7 @@
       <div class="child12"></div>
       <div class="child2">
         <h2>WORSHIP MOOD</h2>
-        <p>
-          Le programme de prière "Brigade de la Rédemption" est une initiative
-          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
-          la santé et d'autres bénédictions divines. Fondé sur la foi
-          chrétienne, ce programme offre un espace de prière et d'intercession
-          pour les besoins spirituels et matériels de chacun. Les participants
-          peuvent se joindre à des séances de prière collectives visant à
-          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
-          Que ce soit pour trouver la guérison, la prospérité ou la paix
-          intérieure, la "Brigade de la Rédemption" offre un lieu de
-          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
-        </p>
+        <p></p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
@@ -632,18 +588,7 @@
     <div class="parent">
       <div class="child2">
         <h2>LE COCKTAIL DES JEUNES</h2>
-        <p>
-          Le programme de prière "Brigade de la Rédemption" est une initiative
-          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
-          la santé et d'autres bénédictions divines. Fondé sur la foi
-          chrétienne, ce programme offre un espace de prière et d'intercession
-          pour les besoins spirituels et matériels de chacun. Les participants
-          peuvent se joindre à des séances de prière collectives visant à
-          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
-          Que ce soit pour trouver la guérison, la prospérité ou la paix
-          intérieure, la "Brigade de la Rédemption" offre un lieu de
-          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
-        </p>
+        <p></p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
