--- a/temoignage.html
+++ b/temoignage.html
@@ -70,7 +70,7 @@
       /* Styles pour l'arrière-plan de la peinture */
       .painting-background {
         background-color: #cd1719; /* Rouge */
-        padding: 10px; /* Espace intérieur autour du h1 */
+        padding: 3px; /* Espace intérieur autour du h1 */
         text-align: center;
         position: relative;
         bottom: 8rem;
@@ -446,7 +446,7 @@
       femmes et d'hommes qui ont placé leur confiance en Dieu, découvrant ainsi
       comment sa puissance et son amour transforment leurs vies.
     </p>
-    <div class="prayer-info-container">
+    <!-- <div class="prayer-info-container">
       <div class="prayer-info">
         <i class=""
           ><img src="./img/user.webp" width="100" height="100" alt=""
@@ -480,7 +480,7 @@
           malesuada.
         </p>
       </div>
-    </div>
+    </div> -->
     <p style="padding: 15px">
       Si vous avez vécu une expérience inspirante ou une bénédiction que vous
       aimeriez partager avec nous, nous vous encourageons à cliquer sur le
