--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@ BOUTIQUE
       <h2>
         Visite Émotionnelle à l'Orphelinat</h2>
       <p>
-        Nous avons une mission profonde : apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et c'est pourquoi nous travaillons sans relâche pour réaliser cette vision. Nous nous engageons à visiter régulièrement les orphelins, à établir des liens affectueux et à leur offrir une éducation de qualité. Nous sommes déterminés à les préparer pour un avenir brillant, en les dotant des compétences et des ressources nécessaires pour réussir dans la vie.Rejoignez notre cause en tant que bénévole, en faisant un don ou en découvrant nos initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins, un acte de bonté à la fois.
+        Nous avons une mission profonde : apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et c'est pourquoi nous travaillons sans relâche pour réaliser cette vision. Nous nous engageons à visiter régulièrement les orphelins, à établir des liens affectueux et à leur offrir une éducation de qualité. Nous sommes déterminés à les préparer pour un avenir brillant, en les dotant des compétences et des ressources nécessaires pour réussir dans la vie. Rejoignez notre cause en tant que bénévole, en faisant un don ou en découvrant nos initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins, un acte de bonté à la fois.
       </p>
       <a class="btn btn-outline-primary py-2 px-3"  href="humanitaire.html">
      En savoir plus
@@ -635,7 +635,7 @@ BOUTIQUE
     <div class="child2">
       <h2>Brigade de Prière</h2>
       <p>
-      La brigade de Prières est un programme qui se déroule au sein du centre "La grâce parle" , les <strong> Mardis, </strong> <strong>Vendredi,</strong>, <strong>Dimanche</strong> et les <strong>Lundi </strong> en Direct sur Facebook.  C'est un programme ou les personnes de toute communauté religieuse se rassemblent pour élever leur voix à Dieu pour une intervention divine de notre seigneur Jésus que ce soit pour la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joints à une séance de prière visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+      La brigade de Prière est un programme qui se déroule au sein du centre "La grâce parle" , les <strong> Mardis, </strong> <strong>Vendredi,</strong>, <strong>Dimanche</strong> et les <strong>Lundi </strong> en Direct sur Maranata(103.1).  C'est un programme ou les personnes de toute communauté religieuse se rassemblent pour élever leur voix à Dieu pour une intervention divine de notre seigneur Jésus que ce soit pour la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joints à une séance de prière visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie.
       </p>
       <a
         class="btn btn-outline-primary py-2 px-3"
