--- a/index.html
+++ b/index.html
@@ -635,7 +635,16 @@ BOUTIQUE
     <div class="child2">
       <h2>Brigade de Prière</h2>
       <p>
-      La brigade de Prière est un programme qui se déroule au sein du centre "La grâce parle" , les <strong> Mardis, </strong> <strong>Vendredi,</strong>, <strong>Dimanche</strong> et les <strong>Lundi </strong> en Direct sur Maranata(103.1).  C'est un programme ou les personnes de toute communauté religieuse se rassemblent pour élever leur voix à Dieu pour une intervention divine de notre seigneur Jésus que ce soit pour la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joints à une séance de prière visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+        La brigade de Prière est un programme qui se déroule au sein de notre
+        centre, les Mardis, Vendredi, Dimanche et les Lundi en Direct sur la
+        radio Maranata(103.1). C'est un programme ou les personnes de toute
+        communauté religieuse se rassemblent pour élever leur voix à Dieu pour
+        une intervention divine de notre seigneur Jésus que ce soit pour la
+        guérison, le travail, la santé et d'autres bénédictions divines. Nous
+        offrons un espace de prière et d'intercession pour les besoins
+        spirituels et matériels de chacun. Vous pouvez nous joindre pour nos
+        séances de prières visant à solliciter les bénédictions de Dieu dans
+        divers aspects de votre vie.
       </p>
       <a
         class="btn btn-outline-primary py-2 px-3"
