--- a/ministere.html
+++ b/ministere.html
@@ -416,18 +416,16 @@
       <div class="child2">
         <h2>Brigade de Prière</h2>
         <p>
-          La brigade de Prière est un programme qui se déroule au sein du centre
-          "La grâce parle" , les <strong> Mardis, </strong>
-          <strong>Vendredi,</strong> <strong>Dimanche</strong> et les
-          <strong>Lundi </strong> en Direct sur Facebook. C'est un programme ou
-          les personnes de toute communauté religieuse se rassemblent pour
-          élever leur voix à Dieu pour une intervention divine de notre seigneur
-          Jésus que ce soit pour la guérison, le travail, la santé et d'autres
-          bénédictions divines. Fondé sur la foi chrétienne, ce programme offre
-          un espace de prière et d'intercession pour les besoins spirituels et
-          matériels de chacun. Les participants peuvent se joints à une séance
-          de prière visant à solliciter les bénédictions de Dieu dans divers
-          aspects de leur vie.
+          La brigade de Prière est un programme qui se déroule au sein de notre
+          centre, les Mardis, Vendredi, Dimanche et les Lundi en Direct sur la
+          radio Maranata(103.1). C'est un programme ou les personnes de toute
+          communauté religieuse se rassemblent pour élever leur voix à Dieu pour
+          une intervention divine de notre seigneur Jésus que ce soit pour la
+          guérison, le travail, la santé et d'autres bénédictions divines. Nous
+          offrons un espace de prière et d'intercession pour les besoins
+          spirituels et matériels de chacun. Vous pouvez nous joindre pour nos
+          séances de prières visant à solliciter les bénédictions de Dieu dans
+          divers aspects de votre vie.
         </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
@@ -491,7 +489,7 @@
       </div>
     </div>
 
-    <div class="parent">
+    <div class="parent flex-one">
       <div class="child2">
         <h2>CHAMBRE HAUTE</h2>
         <p></p>
@@ -523,7 +521,20 @@
       <div class="child10"></div>
       <div class="child2">
         <h2 style="text-transform: uppercase">FEMME DE Grâce</h2>
-        <p></p>
+        <p>
+          "Femme de Grâce" est un rassemblement spécial dédié à l'émancipation,
+          à l'épanouissement et à l'élévation des femmes. Chaque réunion est une
+          opportunité unique pour les femmes de tous horizons de se réunir,
+          d'apprendre, de grandir et de partager leur foi en un avenir meilleur.
+        </p>
+        <p>
+          Au cœur de "Femme de Grâce" se trouvent des enseignements inspirants
+          qui touchent divers aspects de la vie des femmes. Des thèmes tels que
+          la gestion du foyer, le rôle de modèle, et l'impact positif sur leur
+          environnement sont abordés. Cette communion de prière renforce les
+          liens familiaux, apporte la sérénité aux foyers et favorise une
+          transformation positive dans la vie de chaque participante.
+        </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
@@ -537,10 +548,24 @@
         </a>
       </div>
     </div>
-    <div class="parent">
+    <div class="parent flex-one">
       <div class="child2">
         <h2 style="text-transform: uppercase">LE JEûNE DES JEUNES</h2>
-        <p></p>
+        <p>
+          Chaque samedi à partir de 9h, au Centre la Grâce Parle, les jeunes se
+          rassemblent pour une expérience spirituelle profonde et transformante.
+          C'est une opportunité pour les jeunes de chercher la face de Dieu dans
+          leur vie, de se rapprocher de leur foi et de cultiver une connexion
+          spirituelle puissante.
+        </p>
+        <p>
+          Ce programme hebdomadaire est centré sur le jeûne et la prière. Les
+          jeunes s'unissent dans un acte de renoncement, abandonnant
+          temporairement les distractions de la vie quotidienne pour se
+          concentrer sur la recherche de la présence de Dieu. À travers la
+          prière, la méditation et la réflexion personnelle, ils aspirent à une
+          compréhension plus profonde de leur foi et de leur chemin spirituel.
+        </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
@@ -561,7 +586,21 @@
       <div class="child12"></div>
       <div class="child2">
         <h2>WORSHIP MOOD</h2>
-        <p></p>
+        <p>
+          Chaque dimanche, après un programme de trois jours de jeûne et de
+          prière, nous nous rassemblons dans l'unité et dans la foi pour rendre
+          gloire à Dieu avec nos actions de grâce. Le "Worship Mood" est bien
+          plus qu'un simple programme religieux, c'est une expérience
+          spirituelle qui transcende les frontières de la communion. C'est un
+          moment où les âmes se rejoignent pour célébrer la grandeur de notre
+          Créateur.
+        </p>
+
+        <p>
+          Lors de chaque édition de notre programme, nous invitons des chantres
+          de l'Eternel à se joindre à nous pour apporter une dimension unique à
+          cette célébration, inspirant et édifiant tous ceux qui l'assistent.
+        </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
@@ -573,22 +612,31 @@
             <i class="fa fa-arrow-right"></i>
           </div>
         </a>
-
-        <br />
-
-        <div class="prayer-info-container">
-          <div class="prayer-info">
-            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
-            <h2>Dimanche</h2>
-            <p><strong>Heure :</strong> 12h30 - 15h00</p>
-          </div>
-        </div>
       </div>
     </div>
-    <div class="parent">
+    <div class="parent flex-one">
       <div class="child2">
-        <h2>LE COCKTAIL DES JEUNES</h2>
-        <p></p>
+        <h1>LE COCKTAIL DES JEUNES</h1>
+        <p>
+          Le "Cocktail des Jeunes" est un programme soigneusement planifié,
+          offrant une occasion exceptionnelle aux jeunes de se former et de
+          s'épanouir. Tout au long de cette expérience, les jeunes auront
+          l'opportunité d'explorer diverses facettes de la vie qui sont
+          cruciales pour leur développement personnel, social et spirituel.
+          Parmi les thèmes abordés figurent le mariage, la gestion des affaires,
+          et la manière de maintenir une relation solide avec Dieu, en
+          particulier dans la perspective des jeunes.
+        </p>
+        <p>
+          Ce programme offre non seulement une éducation précieuse, mais il
+          favorise également l'interaction sociale et l'amusement. Les jeunes
+          sont invités à participer à une variété d'activités engageantes,
+          telles que des jeux bibliques stimulants et des sessions de danse qui
+          permettent de libérer leur créativité et leur énergie. Enfin, chaque
+          planification du "Cocktail des Jeunes" se termine par une festivité
+          mémorable, créant ainsi des moments de camaraderie et de célébration
+          inoubliables.
+        </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
