--- a/temoignage.html
+++ b/temoignage.html
@@ -490,14 +490,14 @@
           data-wow-delay="0.1s"
           style="max-width: 500px"
         >
-          <div
+          <!-- <div
             class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
           >
             Testimonial
-          </div>
-          <h1 class="display-6 mb-5">
+          </div> -->
+          <!-- <h1 class="display-6 mb-5">
             Trusted By Thousands Of People And Nonprofits
-          </h1>
+          </h1> -->
         </div>
         <div
           class="owl-carousel testimonial-carousel wow fadeInUp"
@@ -506,7 +506,7 @@
           <div class="testimonial-item text-center">
             <img
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/testimonial-1.jpg"
+              src="img/user.png"
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
@@ -523,7 +523,7 @@
           <div class="testimonial-item text-center">
             <img
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/testimonial-2.jpg"
+              src="img/user.png"
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
@@ -540,7 +540,7 @@
           <div class="testimonial-item text-center">
             <img
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/testimonial-3.jpg"
+              src="img/user.png"
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
